feat(java): support JDK 8 through JDK 25